# py-maidr

./: .gitignore  .mcp.json  .nojekyll  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  QUICK_TEST.md  README.md  examples-altair.html  examples-plotly.html  examples.html  fourth_violin_plot.py  index.html  plotly_examples.ipynb  pyproject.toml  robots.txt  search.json  second_violin_plot.py  sitemap.xml  third_violin_plot.py  violin_plot.py
.claude/agents/: code-reviewer.md  linter.md  patch-expert.md  pr-reviewer.md  test-runner.md  test-writer.md
.devcontainer/: devcontainer.json
.github/agents/: code-reviewer.agent.md  linter.agent.md  maidr.agent.md  patch-expert.agent.md  pr-reviewer.agent.md  test-runner.agent.md  test-writer.agent.md
.github/scripts/: fetch-maidr-bundle.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  copilot-setup-steps.yml  docs.yml  release.yml  update-maidr-js.yml
api/: Maidr.save_html.html  Maidr.show.html  index.html  set_backend.html
benchmarks/: README.md  plot_data.py  script.sh
benchmarks/bar/matplotlib/: example_mpl_bar_plot.py
benchmarks/dodged/: example_mpl_dodged.py  example_seaborn_dodged.py
benchmarks/multilayer/: example_mpl_multilayer.py  example_sns_multilayer.py
docs/: .gitignore  _environment  _quarto.yml  examples-altair.qmd  examples-plotly.qmd  examples.qmd  index.qmd  llms.txt
example/bar/: example_bar_plot.ipynb
example/box/: example_box_plot.ipynb  example_outliers.py
example/candle_stick/: example_candle_stick_mpl.py  example_mpl_plot.py  legacy_candlestick_example.py  mplfinance_candlestick_example.py  test_data_daily_current_year.csv  test_data_daily_mixed_years.csv  test_data_hourly.csv  test_data_minute.csv  test_data_weekly.csv
example/count/: example_count_plot.ipynb
example/flask/: test_flask_app.py
example/heatmap/: example_heatmap_plot.ipynb
example/histogram/: example_histogram_plot.ipynb
example/kde/: example_kde_plots.ipynb
example/line/: example_line_plot.ipynb
example/multilayer/: example_mpl_multilayer.py  example_multilayer_plot.ipynb
example/multiline/: example_mpl_multiline.py  example_multiline_plot.ipynb
example/multipanel/: example_multipanel_plot.ipynb
example/quarto/: demo.qmd
example/reg/: example_reg_plots.ipynb
example/scatter/: example_scatter_plot.ipynb
example/shiny/: example_shiny_scatter.py
example/streamlit/: example_streamlit_app.py
example/violin/: example_violin_plots.ipynb
maidr/: __init__.py  api.py  backend.py
maidr/altair/: __init__.py  altair_maidr.py  data_extractor.py  utils.py
maidr/core/: context_manager.py  figure_manager.py  maidr.py
maidr/patch/: __init__.py  barplot.py  boxplot.py  candlestick.py  common.py  heatmap.py  highlight.py  histogram.py  kdeplot.py  lineplot.py  mplfinance.py  regplot.py  scatterplot.py  violinplot.py
maidr/plotly/: __init__.py  bar.py  box.py  candlestick.py  grouped_bar.py  heatmap.py  histogram.py  line.py  multibox.py  multiline.py  plotly_maidr.py  plotly_plot.py  plotly_plot_factory.py  scatter.py
maidr/util/: __init__.py  datetime_conversion.py  dedup_utils.py  dependencies.py  environment.py  format_config.py  iframe_utils.py  mplfinance_utils.py  plot_detection.py  rdp_utils.py  regression_line_utils.py  svg_utils.py
site_libs/bootstrap/: bootstrap-0081f8945b7123cc0ef57e152370cadf.min.css  bootstrap-0220483f27e7ab71b94067ea99bde283.min.css  bootstrap-3e173a9471795c240fc9e7f0b4e5cb29.min.css  bootstrap-8accaca6bfab2e24d93a5bb201ec0268.min.css  bootstrap-acf2b8506783d2a2774cdfdf291bfa52.min.css  bootstrap-d57e3c22d8a8546aa8c6aac37ad482d6.min.css  bootstrap-d5c6d1bfb422f268d52f266265095d56.min.css  bootstrap-ece86a969f6e893266cd6974f1710d44.min.css
tests/: test_backend.py
tests/altair/: test_altair_maidr.py  test_data_extractor.py
tests/core/: test_axes_schema.py  test_figure_metadata.py  test_maidr_plot_factory.py  test_offline_bundle.py
tests/plotly/: conftest.py  test_api_plotly.py  test_plotly_maidr.py  test_plotly_plot_factory.py  test_plotly_plots.py
(+116 files in other folders)
